Added documentation from pull request for computer properties.

--- a/docs/0.4.0/Initialisation options.md.hbs
+++ b/docs/0.4.0/Initialisation options.md.hbs
@@ -55,6 +55,9 @@ ractive = new Ractive({
 > ### append *`Boolean`*
 > Defaults to `false`. Whether to append the Ractive to `el`, or to overwrite the contents of `el`.
 
+> ### computed *`Boolean`*
+> an object that maps to a set of computed values
+
 > ### debug *`Boolean`*
 > Defaults to `false`. Whether to print console messages to help debug applications.
 
