--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -87,6 +87,7 @@
 	<ul>
 		<li>{{{createLink 'Array modification'}}}</li>
 		<li>{{{createLink 'Components'}}}</li>
+		<li> {{{createLink 'Computed Properties'}}}</li>
 		<li>{{{createLink 'Dependants'}}}</li>
 		<li>{{{createLink 'Expressions'}}}</li>
 		<li>{{{createLink 'Keypaths'}}}</li>
