--- a/docs/0.4.0/Initialisation options.md.hbs
+++ b/docs/0.4.0/Initialisation options.md.hbs
@@ -56,7 +56,7 @@ ractive = new Ractive({
 > Defaults to `false`. Whether to append the Ractive to `el`, or to overwrite the contents of `el`.
 
 > ### computed *`Boolean`*
-> an object that maps to a set of computed values
+> an object that maps to a set of computed values. Refer to the documentation for examples {{{createLink 'Computed Properties'}}}.
 
 > ### debug *`Boolean`*
 > Defaults to `false`. Whether to print console messages to help debug applications.
