Issue #13 : Data can now be an array

--- a/docs/0.4.0/Initialisation options.md.hbs
+++ b/docs/0.4.0/Initialisation options.md.hbs
@@ -25,7 +25,7 @@ ractive = new Ractive({
 > ### el *`HTMLElement` or `String` or jQuery-like collection*
 > The container element to render to, or a jQuery collection or string (see {{{createLink 'valid selectors'}}}).
 
-> ### data *`Object`*
+> ### data *`Object` or `Array`*
 > the data to initialise with
 
 > ### partials *`Object`*
