--- a/docs/0.4.0/Observers.md.hbs
+++ b/docs/0.4.0/Observers.md.hbs
@@ -61,6 +61,137 @@ ractive.set( 'foo.bar', 4 ); // alerts nothing; the observer was cancelled
 
 Observers are most useful in the context of {{{createLink 'two‐way binding'}}}.
 
+## Pattern Observers
+
+It is useful to observe on specific keypaths but in the event your data contains array, or a set of dynamic data it isn't logical to bind to every potential keypath that could exist. Pattern observers use a `*` to indicate to Ractive that you would like to be notified whenever anything changes in your data at a particular depth.
+
+There are a few caveats when it comes to observing on array data, when observing on keypath `people.*` you are observing on the length of the array. This means that the `newValue` will be the index at which the new object was pushed. However when you use `set` to change an item at a particular index or a key that is on an object in the array then it will provide the object as the `newValue`.
+
+```js
+var ractive = new Ractive({
+  el: myContainer,
+  template: myTemplate,
+  data: {
+    people: [
+      {name: 'Rich Harris'},
+      {name: 'Marty Nelson'}
+    ]
+  }
+});
+
+ractive.observe('people.*', function(newValue, oldValue, keypath) {
+  
+});
+
+var people = ractive.get('people');
+people.push({name: 'Jason Brown'});
+//newValue will equal 3, and the keypath will be people.length
+
+ractive.set('people.3', {name: 'Jack Black'});
+//newValue will be {name: 'Jack Black'} and the keypath will be people.3
+
+ractive.set('people.3.isACelebrity', true);
+//newValue will be {name: 'Jack Black', isACelebrity: true} and the keypath will be people.3
+
+ractive.set('people.0.info.isCreator', true);
+//newValue will be the object for index 0 and the keypath will be people.0
+
+```
+
+Notice that because you are observing at the array level that `newValue` will be set as the entire object. What if you were only interested in knowing when a user became a celebrity? Simply tell Ractive you only want to observe dynamically on the array but only be notified when the `isACelebrity` key changes, `people.*.isACelebrity`.
+
+```js
+ractive.observe('people.*.isACelebrity', function(newValue, oldValue, keypath) {
+  
+});
+
+ractive.set('people.0.isACelebrity', true); //Rich Harris is a celebrity
+//newValue will be `true` and the keypath will be people.0.isACelebrity
+
+```
+
+You are not limited to just one `*` for your pattern, you can use as many as you would like and in any particular order.
+
+```js
+
+ractive.observe('people.*.comments.*', function(newValue, oldValue, keypath) {
+  
+});
+
+//even arrays of arrays
+
+ractive.observe('people.*.*', function(newValue, oldValue, keypath) {
+  
+});
+
+```
+
+Furthermore it works on objects as well `config.*` will notify you when a value is changed on any key on the config object. However this differs from observing on an array in that it will provide the value set and keypath to the key that was set.
+
+```js
+var ractive = new Ractive({
+  el: myContainer,
+  template: myTemplate,
+  data: {
+    config: {
+      allowComments: true,
+      allowEdit: false
+    }
+  }
+});
+
+ractive.observe('config.*', function(newValue, oldValue, keypath) {
+  
+});
+
+ractive.set('config.allowEdit', true);
+//newValue will be true and the keypath will be config.allowEdit
+
+```
+
+Pattern observers are a simple and flexible that will allow you to observe your data any way that you want.
+
+## Space Delimited Observers
+
+Space delimited observers are useful when different keypaths should trigger the same function. In previous version you would have had to bind each keypath individually to the function.
+
+This is a contrived example but for examples sake bare with us.
+
+```js
+var ractive = new Ractive({
+  el: myContainer,
+  template: myTemplate,
+  data: {
+    user: {username: 'browniefed'},
+    config: {isAdmin: false},
+    commentCount: 0
+  }
+});
+
+function updateServer() {
+  //Make call to server because something in user, config, comments changed
+}
+
+ractive.observe('user.username', updateServer);
+ractive.observe('config.isAdmin', updateServer);
+ractive.observe('commentCount', updateServer);
+
+```
+
+This is unecessarily verbose, now with space delimited observers this becomes a single line.
+
+```js 
+ractive.observe('user.username config.isAdmin commentCount', updateServer);
+
+```
+
+This will work with patterns observers as well.
+
+```js
+ractive.observe('user.* config.* commentCount', updateServer);
+
+```
+
 
 ## A 'gotcha' to be aware of
 
