--- a/docs/0.4.0/Two-way binding.md.hbs
+++ b/docs/0.4.0/Two-way binding.md.hbs
@@ -153,7 +153,7 @@ Under the hood, Ractive always binds to the `change` event (and the `click` even
 
 ## Observing changes
 
-To use user input elsewhere in your app, you'll need to observe it using {{{createLink 'active.observe()'}}}:
+To use user input elsewhere in your app, you'll need to observe it using {{{createLink 'ractive.observe()'}}}:
 
 ```html
 <input placeholder='Type your name' value='\{{user.name}}'>
