--- a/docs/0.4.0/Components.md.hbs
+++ b/docs/0.4.0/Components.md.hbs
@@ -169,6 +169,55 @@ ractive.on( 'doSomething', function () {
 
 (The same goes for any events that are fired programmatically by the component, rather than as a result of user interaction.)
 
+## The `\{{>content}}` Directive 
+
+Any content in the template calling the component:
+
+```html
+<list items='\{{gunas}}''>
+    \{{name}} (\{{qualities}})
+</list>
+
+<list items='\{{fates}}'>
+    "\{{.}}"
+</list>
+``` 
+is exposed in the component as a partial named "content":
+
+```html
+<!-- template for "list" component -->
+<ul>
+    \{{#items}}
+    <li>\{{>content}}</li>
+    \{{/}}
+</ul>
+```
+
+A partial, or component, can be used as well:
+```html
+<list items='\{{gunas}}''>
+    \{{>partialA}})
+</list>
+
+<list items='\{{fates}}''>
+    <widget value='{{.}}'/> 
+</list>
+```
+
+Currently, the content markup resolves in the component's context. In the second example above the `value` parameter for `<widget>` is the individual list item of `{{fates}}`. And in the first case, the partial would need to be defined globally (`Ractive.partials`) or on the component, as it won't be found if it is defined, for example, inline in the outer context:
+
+```html
+<list items="\{{fates}}">
+    \{{>partialB}}
+</list>
+<!-- \{{>partialB}} -->
+    //won't be found by list component,
+    //because this markup is handed off 
+    //and rendered inside component
+<!-- \{{/partial}} -->
+```
+Be aware that the context scope for resolution may change or be expanded in a future release to control whether it resolves in the calling or component context. 
+
 ## Psuedo Dynamic Templating
 
 In some cases you want to render a different template depending on the data that is passed in.
