--- a/docs/0.4.0/Components.md.hbs
+++ b/docs/0.4.0/Components.md.hbs
@@ -200,7 +200,7 @@ A partial, or component, can be used as well:
 </list>
 
 <list items='\{{fates}}''>
-    <widget value='{{.}}'/> 
+    <widget value='\{{.}}'/> 
 </list>
 ```
 
