--- a/docs/0.4.0/Plugins.md.hbs
+++ b/docs/0.4.0/Plugins.md.hbs
@@ -20,18 +20,18 @@ Plugins allow you to augment Ractive with extra functionality. You can create yo
 
 ## {{{createLink 'Events'}}}
 
-* [Tap](http://ractivejs.github.io/Ractive-events-tap)
-* [Hover](http://ractivejs.github.io/Ractive-events-hover)
+* [Tap](http://ractivejs.github.io/ractive-events-tap)
+* [Hover](http://ractivejs.github.io/ractive-events-hover)
 * [Mousewheel](http://ractivejs.github.io/Ractive-events-mousewheel)
-* [Keys](http://ractivejs.github.io/Ractive-events-keys)
+* [Keys](http://ractivejs.github.io/ractive-events-keys)
 * [Drag and Drop](https://github.com/Nijikokun/ractive.drag.drop.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 * [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 
 
 ## {{{createLink 'Transitions'}}}
 
-* [Fade](http://ractivejs.github.io/Ractive-transitions-fade)
-* [Slide](http://ractivejs.github.io/Ractive-transitions-slide)
-* [Fly](http://ractivejs.github.io/Ractive-transitions-fly)
+* [Fade](http://ractivejs.github.io/ractive-transitions-fade)
+* [Slide](http://ractivejs.github.io/ractive-transitions-slide)
+* [Fly](http://ractivejs.github.io/ractive-transitions-fly)
 * [Typewriter](http://ractivejs.github.io/Ractive-transitions-typewriter)
 * [Scale](https://github.com/1N50MN14/Ractive-transitions-scale) - contributed by [@1N50MN14](https://github.com/1N50MN14)
