--- a/docs/0.4.0/Adaptors.md.hbs
+++ b/docs/0.4.0/Adaptors.md.hbs
@@ -30,7 +30,7 @@ ractive = new Ractive({
   el: container,
   template: myTemplate,
   data: myBackboneModel,
-  adapt: [ 'Backbone' ]
+  adaptors: [ 'Backbone' ]
 });
 ```
 
