--- a/docs/0.4.0/ractive.fire().md.hbs
+++ b/docs/0.4.0/ractive.fire().md.hbs
@@ -1,7 +1,7 @@
 ---
 title: ractive.fire()
 ---
-Fires an event, which will be received by handlers that were bound using `ractive.on`. In practical terms, you would use mostly likely use this with {{{createLink 'Ractive.extend()'}}}, to allow applications to hook into your subclass.
+Fires an event, which will be received by handlers that were bound using `ractive.on`. In practical terms, you would mostly likely use this with {{{createLink 'Ractive.extend()'}}}, to allow applications to hook into your subclass.
 
 
 > ### ractive.fire( eventName[, arg1[, arg2[, ...argN]]])
