--- a/docs/0.4.0/Initialisation options.md.hbs
+++ b/docs/0.4.0/Initialisation options.md.hbs
@@ -55,7 +55,7 @@ ractive = new Ractive({
 > ### append *`Boolean`*
 > Defaults to `false`. Whether to append the Ractive to `el`, or to overwrite the contents of `el`.
 
-> ### computed *`Boolean`*
+> ### computed *`Object`*
 > an object that maps to a set of computed values. Refer to the documentation for examples {{{createLink 'Computed Properties'}}}.
 
 > ### debug *`Boolean`*
