Change computed type "Boolean" to "Object"

--- a/docs/0.4.0/Initialisation options.md.hbs
+++ b/docs/0.4.0/Initialisation options.md.hbs
@@ -48,7 +48,7 @@ ractive = new Ractive({
 > ### data *`Object` or `Array`*
 > The data with which to initialise.
 
-> ### computed *`Boolean`*
+> ### computed *`Object`*
 > An object that maps to a set of computed values. Refer to the documentation for examples {{{createLink 'Computed Properties'}}}.
 
 > ### magic *`Boolean`*
