--- a/docs/0.4.0/ractive.updateModel().md.hbs
+++ b/docs/0.4.0/ractive.updateModel().md.hbs
@@ -18,6 +18,8 @@ alert( ractive.get( 'name' ) ); // alerts 'Jim'
 ```
 
 > ### ractive.updateModel( keypath [, cascade ])
+> Returns a `Promise` (see {{{createLink 'Promises'}}})
+
 > > #### **keypath** *`String`*
 > > The keypath to treat as 'dirty'. Any two-way bindings linked to this keypath will be checked to see if the model is out of date
 > > #### cascade *`Boolean`*
@@ -25,4 +27,4 @@ alert( ractive.get( 'name' ) ); // alerts 'Jim'
 
 
 > ### ractive.updateModel()
-> If a `keypath` is not specified, all two-way bindings will be checked.
+> Returns a `Promise` (see {{{createLink 'Promises'}}}). If a `keypath` is not specified, all two-way bindings will be checked.
