--- a/docs/0.4.0/Writing adaptor plugins.md.hbs
+++ b/docs/0.4.0/Writing adaptor plugins.md.hbs
@@ -174,7 +174,7 @@ boxAdaptor = {
         }
 
         if ( data.height !== undefined ) {
-          box.height = width;
+          box.height = height;
         }
       }
     };
