Add select2 plugin

--- a/docs/0.4.0/Plugins.md.hbs
+++ b/docs/0.4.0/Plugins.md.hbs
@@ -16,6 +16,7 @@ Plugins allow you to augment Ractive with extra functionality. You can create yo
 ## {{{createLink 'Decorators'}}}
 
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
+* [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
 
 
 ## {{{createLink 'Events'}}}
