add modella adaptor

--- a/docs/0.4.0/Plugins.md.hbs
+++ b/docs/0.4.0/Plugins.md.hbs
@@ -9,6 +9,7 @@ Plugins allow you to augment Ractive with extra functionality. You can create yo
 
 * [Backbone](https://github.com/ractivejs/ractive-adaptors-backbone)
 * [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
+* [Modella](https://github.com/staygrimm/ractive-adaptors-modella)
 * TODO Ractive (synchronise several Ractive instances)
 * TODO Object.observe
 
