Updated null value of two-way select template
{{selectedCountry}} returns "Select a country" if no null value is defined in template even with disabled tag inserted.

--- a/docs/0.4.0/Two-way binding.md.hbs
+++ b/docs/0.4.0/Two-way binding.md.hbs
@@ -59,7 +59,7 @@ Drop-down select menus are good when you have many options to choose from. They'
 
 ```html
 <select value='\{{selectedCountry}}'>
-	<option selected disabled>Select a country</option>
+	<option value="" selected disabled>Select a country</option>
 	\{{#countries}}
 		<option value='\{{id}}'>\{{name}}</option>
 	\{{/countries}}
