--- a/templates/0.4.0/page.hbs
+++ b/templates/0.4.0/page.hbs
@@ -13,6 +13,7 @@
 
 	<!--[if lte IE 8]>
 		<script src='assets/respond.min.js'></script>
+		<script src='assets/html5shiv.js'></script>
 	<![endif]-->
 
 </head>
