Squashed 'shared/' changes from c9b7c75..a7a34ac
a7a34ac IE fix

git-subtree-dir: shared
git-subtree-split: a7a34ac43a70e90d215547cb765d197756d5954a

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,9 @@
 @import "code";
 @import "codemirror";
 @import "buttons";
+
+
+// IE8...
+header, nav, section, article, aside, footer {
+	display: block;
+}
