--- a/templates/0.4.0/page.hbs
+++ b/templates/0.4.0/page.hbs
@@ -12,8 +12,8 @@
 	<link rel='stylesheet' href='../min.css'>
 
 	<!--[if lte IE 8]>
-		<script src='assets/respond.min.js'></script>
-		<script src='assets/html5shiv.js'></script>
+		<script src='../assets/respond.min.js'></script>
+		<script src='../assets/html5shiv.min.js'></script>
 	<![endif]-->
 
 </head>
