--- a/docs/0.4.0/Plugins.md.hbs
+++ b/docs/0.4.0/Plugins.md.hbs
@@ -10,6 +10,8 @@ Plugins allow you to augment Ractive with extra functionality. You can create yo
 * [Backbone](https://github.com/ractivejs/ractive-adaptors-backbone)
 * [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
 * [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
+* [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
+* [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
 * TODO Ractive (synchronise several Ractive instances)
 * TODO Object.observe
 
