--- a/docs/0.4.0/Initialisation options.md.hbs
+++ b/docs/0.4.0/Initialisation options.md.hbs
@@ -15,6 +15,7 @@ ractive = new Ractive({
 ## Templating
 
 > ### **template** *`String` or (if {{{createLink 'preparsing'}}}) `Array` or `Object`*
+
 > The template to use. If this is a string, it must be valid (if meaningless, until rendered) HTML, otherwise this must be the output of {{{createLink 'Ractive.parse()'}}}.
 
 > Alternatively, you can pass an id selector string like `#myTemplate` - in this case, Ractive will use the contents of an element whose ID is `myTemplate`. See the [60 second setup](http://ractivejs.org/60-second-setup) for an example of this.
@@ -22,8 +23,27 @@ ractive = new Ractive({
 > ### partials *`Object`*
 > A `key: value` hash of partials that are specific to this instance, where `key` is the name of the partial (as referenced within templates as `\{{>myPartial}}`), and `value` is either a valid template string or the output of {{{createLink 'Ractive.parse()'}}}. See {{{createLink 'Partials'}}} for more info.
 
+{{#example}}
+```js
+el: '#template'
+
+ok too
+el: 'template'
+```
+{{/example}}
+
 > ### components *`Object`*
 > A `key: value` hash of components that are specific to this instance, where `key` is the name of the component (as referenced within templates as `<my-component></my-component>`), and `value` is a valid component create by {{{createLink 'Ractive.extend()'}}}. See {{{createLink 'Components'}}} for more info.
+
+{{#example}}
+```js
+el: '#template'
+
+//ok too
+el: 'template'
+
+```
+{{/example}}
 
 ## Placement
 
