--- a/docs/0.4.0/Using Ractive with Browserify.md.hbs
+++ b/docs/0.4.0/Using Ractive with Browserify.md.hbs
@@ -3,4 +3,7 @@ title: Using Ractive with Browserify
 ---
 [Browserify](http://browserify.org/) is a way of using [node-style](http://nodejs.org/) requires in the browser, bundling your scripts into a single file for efficient deployment.
 
-You can use Ractive.js alongside Browserify using [Ractify](https://npmjs.org/package/ractify) by [marcello3d](https://github.com/marcello3d) (thanks!). Visit the [Ractify repository](https://github.com/marcello3d/node-ractify) for downloads and documentation.
+There are two Browserify transforms available that you can use for Ractive.js:
+
+- [Ractivate](https://www.npmjs.org/package/ractivate), a transform that will pre-parse templates. Contributed by [jrajav](https://github.com/jrajav). [(Github repository)](https://github.com/jrajav/ractivate)
+- [Ractify](https://npmjs.org/package/ractify), a transform that will pre-compile components. Contributed by [marcello3d](https://github.com/marcello3d). [(Github repository)](https://github.com/marcello3d/node-ractify)
