--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -10,13 +10,16 @@
 </section>
 
 <section>
-	<h1>API Reference</h1>
-	<h2>new Ractive(...)</h2>
+	<h1>Configuration</h1>
 	<ul>
-		<li>{{{createLink 'Initialisation overview' 'Overview'}}}</li>
-		<li>{{{createLink 'Initialisation options'}}}</li>
+		<li>{{{createLink 'Options'}}}</li>
+		<li>{{{createLink 'Ractive.defaults' 'Defaults'}}}</li>
 	</ul>
-
+	<h1>API Reference</h1>
+	<h2>Constructor</h2>
+	<ul>
+		<li>{{{createLink 'new Ractive(...)'}}}</li>
+	</ul>
 	<h2>Instance methods</h2>
 	<ul>
 		<li>{{{createLink 'ractive.add()'}}}</li>
@@ -43,20 +46,17 @@
 		<li>{{{createLink 'ractive.update()'}}}</li>
 		<li>{{{createLink 'ractive.updateModel()'}}}</li>
 	</ul>
-
 	<h2>Instance properties</h2>
 	<ul>
 		<li>{{{createLink 'ractive.nodes'}}}</li>
 		<li>{{{createLink 'ractive.transitions (instance)' 'ractive.transitions'}}}</li>
 		<li>{{{createLink 'ractive.partials (instance)' 'ractive.partials'}}}</li>
 	</ul>
-
 	<h2>Static methods</h2>
 	<ul>
 		<li>{{{createLink 'Ractive.parse()'}}}</li>
 		<li>{{{createLink 'Ractive.extend()'}}}</li>
 	</ul>
-
 	<h2>Static properties</h2>
 	<ul>
 		<li>{{{createLink 'Ractive.defaults'}}}</li>
@@ -111,5 +111,6 @@
 	<ul>
 		<li><a href='../0.3.9'>0.3.9</a></li>
 		<li><a href='../0.4.0'>0.4.0</a></li>
+		<li><a href='../edge'>edge</a></li>
 	</ul>
 </section>
