--- a/docs/0.4.0/Ractive.extend().md.hbs
+++ b/docs/0.4.0/Ractive.extend().md.hbs
@@ -3,6 +3,29 @@ title: Ractive.extend()
 ---
 Ractive is more than a library; it is a platform. It makes it easier to create reusable, but specialised, blocks of functionality such as to-do lists, slideshows, bar charts, text editors, and so on.
 
+Default options can also be provided using {{{ createLink 'Ractive.extend()' }}}. While the result
+is a fully instantiable on its own, the main value is that they can then be used as components
+within your templates:
+
+```js
+var MyRactive = Ractive.extend({
+  template: 'I can be instantiated _or_ be a component!'
+});
+
+var ractive = new MyRactive({
+  el: 'container'
+});
+
+var ractive2 = Ractive({
+  el: 'container2',
+  template: '<widget/>',
+  components: {
+    widget: MyRactive
+  }
+});
+```
+
+
 Though it's technically incorrect, we'll refer to these as *subclasses* of the Ractive *base class*. In order to create them, we use `Ractive.extend()`.
 
 Here's a simple example - we'll create a `Modal` subclass which has a default template, and which always stays centred on the page:
