update broken link

--- a/docs/0.4.0/Get started.md.hbs
+++ b/docs/0.4.0/Get started.md.hbs
@@ -23,8 +23,8 @@ in the __html document__.
 
 A good way to get up and running is with the [60 second setup](http://ractivejs.org/60-second-setup). After that, working your way through the [interactive tutorials](http://learn.ractivejs.org) will familiarise you with the various ways you can use Ractive.
 
-Checkout the {{{createLink 'Configuration overview' 'Configuration Overview'}}} to learn more about
-all the available options, extending Ractive, and using Components.
+Checkout the {{{createLink 'Options' 'Configuration Options'}}} to learn more about
+all the available options.
 
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
 
