enable preview of edge docs

--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -110,5 +110,6 @@
 	<ul>
 		<li><a href='../0.3.9'>0.3.9</a></li>
 		<li><a href='../0.4.0'>0.4.0</a></li>
+		<li><a href='../edge'>edge</a></li>
 	</ul>
 </section>
