--- a/docs/0.4.0/Get started.md.hbs
+++ b/docs/0.4.0/Get started.md.hbs
@@ -11,3 +11,5 @@ A good way to get up and running is with the [60 second setup](http://ractivejs.
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
 
 *Documentation for previous versions: [0.3.9](../0.3.9)*
+
+*Documentation for edge version: [edge](../edge)*
