--- a/docs/0.4.1/Partials.md.hbs
+++ b/docs/0.4.1/Partials.md.hbs
@@ -31,7 +31,7 @@ You can specify partials when you create a Ractive instance:
 ractive = new Ractive({
   el: myContainer,
   template: myTemplate,
-  partials: { thumbnail: myThumbnailPartial }
+  partials: { thumbnail: myThumbnailPartial },
   data: { items: myItems }
 });
 ```
