--- a/docs/0.4.1/Components.md.hbs
+++ b/docs/0.4.1/Components.md.hbs
@@ -248,7 +248,7 @@ Currently, the content markup resolves in the component's context. In the second
 ```
 Be aware that the context scope for resolution may change or be expanded in a future release to control whether it resolves in the calling or component context. 
 
-## Psuedo Dynamic Templating
+## Pseudo Dynamic Templating
 
 In some cases you want to render a different template depending on the data that is passed in.
 
