--- a/docs/0.3.9/Components.md.hbs
+++ b/docs/0.3.9/Components.md.hbs
@@ -169,7 +169,7 @@ ractive.on( 'doSomething', function () {
 
 (The same goes for any events that are fired programmatically by the component, rather than as a result of user interaction.)
 
-## Psuedo Dynamic Templating
+## Pseudo Dynamic Templating
 
 In some cases you want to render a different template depending on the data that is passed in.
 
